remove 'network' module in polybar (use nm-applet instead in systray)

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -31,7 +31,7 @@ separator-foreground = ${colors.gray}
 font-0 = "CaskaydiaCove Nerd Font:size=12"
 font-1 = "Lexend:size=12"
 font-2 = "Lexend:size=16"
-modules-left = systray network brightnessctl pulseaudio
+modules-left = systray brightnessctl pulseaudio
 modules-center = xworkspaces
 modules-right = battery date powermenu
 cursor-click = pointer
@@ -69,33 +69,6 @@ ramp-volume-0 = "󰕿"
 ramp-volume-1 = "󰖀"
 ramp-volume-2 = "󰕾"
 ramp-volume-foreground = ${colors.orange}
-
-[module/network]
-type = internal/network
-interface = wlo1
-interface-type = wireless
-interval = 1
-format-connected = <ramp-signal>
-format-disconnected = <label-disconnected>
-label-packetloss = "󰤣 "
-label-disconnected = "󰤭 "
-
-label-packetloss-foreground = ${colors.red}
-label-connected-foreground = ${colors.orange}
-label-disconnected-foreground = ${colors.orange}
-
-ramp-signal-0 = "󰤯"
-ramp-signal-1 = "󰤟"
-ramp-signal-2 = "󰤢"
-ramp-signal-3 = "󰤢"
-ramp-signal-4 = "󰤥"
-ramp-signal-5 = "󰤨"
-
-ramp-signal-foreground = ${colors.orange}
-ramp-signal-0-foreground = ${colors.red}
-ramp-signal-1-foreground = ${colors.red}
-ramp-signal-4-foreground = ${colors.green}
-ramp-signal-5-foreground = ${colors.green}
 
 [module/date]
 type = internal/date
