added dotfiles for sddm; modified low battery label, readme

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -93,7 +93,7 @@ format-discharging = <ramp-capacity> <label-discharging>
 format-low = <animation-low> <label-low>
 label-charging = %{T2}%percentage%%
 label-discharging = %{T2}%percentage%%
-label-low = %{T2}Low Battery!
+label-low = %{T2}%percentage%% LOW BATTERY!
 
 label-low-foreground = ${colors.red}
 label-full-foreground = ${colors.blue}
